--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,16 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "prettier/prettier": [
+        "warn",
+        {
+          "tabWidth": 4,
+          "useTabs": false
+          
+        }
+      ]
+    }
   },
   "browserslist": [
     "> 1%",
